--- a/Events/Main_iPhone.storyboard
+++ b/Events/Main_iPhone.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -218,36 +219,36 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="289"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <view clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nw5-1X-2tB">
+                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nw5-1X-2tB">
                                             <rect key="frame" x="0.0" y="41" width="320" height="242"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="actionbar_bg_white.png" translatesAutoresizingMaskIntoConstraints="NO" id="hZz-Fc-C5U">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="actionbar_bg_white.png" translatesAutoresizingMaskIntoConstraints="NO" id="hZz-Fc-C5U">
                                                     <rect key="frame" x="0.0" y="0.0" width="320" height="24"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="yrS-TY-Ls0"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="actionbar_bg_white.png" translatesAutoresizingMaskIntoConstraints="NO" id="tX4-rk-1Qb">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="actionbar_bg_white.png" translatesAutoresizingMaskIntoConstraints="NO" id="tX4-rk-1Qb">
                                                     <rect key="frame" x="0.0" y="197" width="320" height="45"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" image="no_image.png" translatesAutoresizingMaskIntoConstraints="NO" id="ILR-go-4Tt">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" image="no_image.png" translatesAutoresizingMaskIntoConstraints="NO" id="ILR-go-4Tt">
                                                     <rect key="frame" x="0.0" y="19" width="320" height="178"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </imageView>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tue, Mar 20 2017 12:00 AM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAs-yS-Ks3">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tue, Mar 20 2017 12:00 AM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAs-yS-Ks3">
                                                     <rect key="frame" x="4" y="-7" width="318" height="31"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wl1-Ms-NGj">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wl1-Ms-NGj">
                                                     <rect key="frame" x="8" y="221" width="304" height="14"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="14" id="imz-5Q-GAP"/>
+                                                    </constraints>
                                                     <attributedString key="attributedText">
                                                         <fragment content="Event Description!">
                                                             <attributes>
@@ -259,33 +260,48 @@
                                                     </attributedString>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MAIN EVENT" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1K-qr-2kS">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MAIN EVENT" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1K-qr-2kS">
                                                     <rect key="frame" x="8" y="197" width="304" height="25"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                     <color key="textColor" red="0.92941176469999998" green="0.10980392160000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KEK-II-M2a">
-                                                    <rect key="frame" x="270" y="168" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7mM-6u-36y">
-                                                    <rect key="frame" x="220" y="168" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="MAs-yS-Ks3" firstAttribute="leading" secondItem="nw5-1X-2tB" secondAttribute="leading" constant="4" id="3fS-66-hlV"/>
+                                                <constraint firstItem="ILR-go-4Tt" firstAttribute="top" secondItem="nw5-1X-2tB" secondAttribute="top" constant="19" id="6N0-rG-uXV"/>
+                                                <constraint firstItem="hZz-Fc-C5U" firstAttribute="trailing" secondItem="ILR-go-4Tt" secondAttribute="trailing" id="79z-cG-XAP"/>
+                                                <constraint firstItem="ILR-go-4Tt" firstAttribute="trailing" secondItem="tX4-rk-1Qb" secondAttribute="trailing" id="990-NO-QlA"/>
+                                                <constraint firstItem="hZz-Fc-C5U" firstAttribute="top" secondItem="nw5-1X-2tB" secondAttribute="top" id="ATX-g7-OSk"/>
+                                                <constraint firstItem="tX4-rk-1Qb" firstAttribute="top" secondItem="ILR-go-4Tt" secondAttribute="bottom" id="EXS-kc-7yv"/>
+                                                <constraint firstItem="U1K-qr-2kS" firstAttribute="leading" secondItem="wl1-Ms-NGj" secondAttribute="leading" id="Hvs-FL-Snh"/>
+                                                <constraint firstAttribute="bottom" secondItem="wl1-Ms-NGj" secondAttribute="bottom" constant="7" id="K3j-J4-7vJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="MAs-yS-Ks3" secondAttribute="trailing" constant="-2" id="VG9-Wu-NBT"/>
+                                                <constraint firstItem="U1K-qr-2kS" firstAttribute="leading" secondItem="nw5-1X-2tB" secondAttribute="leadingMargin" id="X26-rK-scS"/>
+                                                <constraint firstItem="hZz-Fc-C5U" firstAttribute="bottom" secondItem="MAs-yS-Ks3" secondAttribute="bottom" id="aMq-ke-Zas"/>
+                                                <constraint firstItem="hZz-Fc-C5U" firstAttribute="leading" secondItem="nw5-1X-2tB" secondAttribute="leading" id="cxx-yr-zvg"/>
+                                                <constraint firstAttribute="bottom" secondItem="U1K-qr-2kS" secondAttribute="bottom" constant="20" id="gie-0U-0Dj"/>
+                                                <constraint firstItem="ILR-go-4Tt" firstAttribute="leading" secondItem="tX4-rk-1Qb" secondAttribute="leading" id="hMC-pi-bIG"/>
+                                                <constraint firstAttribute="bottom" secondItem="tX4-rk-1Qb" secondAttribute="bottom" id="jJy-Oa-zgE"/>
+                                                <constraint firstAttribute="trailing" secondItem="hZz-Fc-C5U" secondAttribute="trailing" id="liz-Yn-1Kn"/>
+                                                <constraint firstItem="U1K-qr-2kS" firstAttribute="centerX" secondItem="tX4-rk-1Qb" secondAttribute="centerX" id="mTP-5g-GIn"/>
+                                                <constraint firstItem="U1K-qr-2kS" firstAttribute="trailing" secondItem="wl1-Ms-NGj" secondAttribute="trailing" id="rSg-oN-r7q"/>
+                                                <constraint firstItem="tX4-rk-1Qb" firstAttribute="top" secondItem="U1K-qr-2kS" secondAttribute="top" id="vNm-vV-zoP"/>
+                                                <constraint firstItem="hZz-Fc-C5U" firstAttribute="leading" secondItem="ILR-go-4Tt" secondAttribute="leading" id="wYe-ui-h1k"/>
+                                                <constraint firstItem="wl1-Ms-NGj" firstAttribute="top" secondItem="ILR-go-4Tt" secondAttribute="bottom" constant="24" id="wiE-8f-Q0A"/>
+                                                <constraint firstItem="MAs-yS-Ks3" firstAttribute="top" secondItem="nw5-1X-2tB" secondAttribute="top" constant="-7" id="yZb-z8-aPc"/>
+                                            </constraints>
                                         </view>
                                     </subviews>
                                     <color key="backgroundColor" red="0.20449370145797729" green="0.20762237906455994" blue="0.20769903063774109" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="nw5-1X-2tB" secondAttribute="trailing" id="4lq-Pk-rV6"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="nw5-1X-2tB" secondAttribute="bottom" constant="-2" id="9B1-Fl-o0s"/>
+                                        <constraint firstItem="nw5-1X-2tB" firstAttribute="leading" secondItem="8wL-aY-Eur" secondAttribute="leading" id="gMy-36-XDa"/>
+                                        <constraint firstItem="nw5-1X-2tB" firstAttribute="top" secondItem="8wL-aY-Eur" secondAttribute="topMargin" constant="33" id="jag-2h-d6u"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -316,6 +332,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="663"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Q9r-jJ-DmW">
